<resources>
    <string name="app_name">路路通</string>
    <string name="car">汽车票</string>
    <string name="train">火车票</string>
    <string name="plane">飞机票</string>
    <string name="me">我的</string>
    <string name="car_reserve">汽车票预定</string>
    <string name="train_reserve">火车票预定</string>
    <string name="plane_reserve">飞机票预定</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="inform">通知</string>
    <string name="about">关于</string>
</resources>
