<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:baselineAligned="false"
    android:background="@color/main_background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:text="@string/me" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relative_login"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_main_bg_selector">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="25dp"
            android:layout_marginStart="25dp"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:text="@string/login" />

        <ImageView
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="18dp"
            android:layout_marginEnd="18dp"
            android:src="@mipmap/forward" />

    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:scaleType="fitXY"
        android:src="@mipmap/spilt_line"/>

    <RelativeLayout
        android:id="@+id/relative_register"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/btn_main_bg_selector">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="25dp"
            android:layout_marginStart="25dp"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:text="@string/register" />

        <ImageView
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="18dp"
            android:layout_marginEnd="18dp"
            android:src="@mipmap/forward" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relative_login_inform"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_main_bg_selector">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="25dp"
            android:layout_marginStart="25dp"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:text="@string/inform" />

        <ImageView
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="18dp"
            android:layout_marginEnd="18dp"
            android:src="@mipmap/forward" />

    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:scaleType="fitXY"
        android:src="@mipmap/spilt_line" />

    <RelativeLayout
        android:id="@+id/relative_login_about"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/btn_main_bg_selector">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="25dp"
            android:layout_marginStart="25dp"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:text="@string/about" />

        <ImageView
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="18dp"
            android:layout_marginEnd="18dp"
            android:src="@mipmap/forward" />

    </RelativeLayout>

</LinearLayout>
